k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-autoscaling-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-autoscaling-demo
  template:
    metadata:
      labels:
        app: k8s-autoscaling-demo
    spec:
      containers:
        - name: k8s-autoscaling-demo
          imagePullPolicy: Always
          image: salmanal77/k8s-autoscaling-demo:latest # Replace with your image
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
