k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-autoscaling-demo-service
spec:
  selector:
    app: k8s-autoscaling-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
